Support much more robust "Effective Origin" extraction (previously `clientUrlPrefix`)